addded a new module to the application backend